kubectl/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gestion
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/auth-response-headers: "x-auth-request-user, x-auth-request-email, authorization"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/proxy-body-size: 15m
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "*"
    nginx.ingress.kubernetes.io/cors-allow-headers: "*"
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: user-service-1
                port:
                  number: 8080
            path: /service1
            pathType: Prefix
    - http:
        paths:
          - backend:
              service:
                name: user-service-2
                port:
                  number: 8082
            path: /service2
            pathType: Prefix
  ingressClassName: nginx
